[tool.poetry]
name = "boards"
version = "0.1.0"
description = ""
authors = ["Carlos José C Jr <carlosjosecjr@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
